--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: clamp(1rem, 5vw, 2rem);
+  padding: clamp(1rem, 5vw, 2.5rem);
 }
 
 .logo {
@@ -44,7 +44,7 @@ html {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: clamp(1rem, 5vw, 2rem);
+  padding: clamp(1rem, 5vw, 2.5rem);
   border-bottom: 1px solid #A5A1A1;
 }
 .info-promo p {
@@ -54,4 +54,42 @@ html {
 }
 .info-promo span {
   font-size: 1.5rem;
+}
+
+.produtos {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 5rem;
+  padding: clamp(1rem, 5vw, 2.5rem);
+}
+
+.produto {
+  flex: 0 1 43rem;
+}
+
+.produto-img {
+  width: 100%;
+}
+.produto-img img {
+  display: block;
+  width: 100%;
+  height: 30rem;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.desc-produto {
+  padding: 1rem 0;
+  font-weight: bold;
+  font-size: clamp(2rem, 5vw, 2.5rem);
+}
+
+.valor {
+  font-weight: bold;
+  font-size: clamp(2rem, 5vw, 2rem);
+}
+.valor span {
+  color: #5CA720;
 }/*# sourceMappingURL=style.css.map */
