--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -162,6 +162,7 @@ $background-footer: #F9F9F9;
 
   button {
     border: none;
+    cursor: pointer;
     font-size: 1.6rem;
     font-weight: bold;
     padding: 1rem 2rem;
