--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,7 @@ html {
 }
 .newsletter button {
   border: none;
+  cursor: pointer;
   font-size: 1.6rem;
   font-weight: bold;
   padding: 1rem 2rem;
